Add docs;format swagger documents;separate modules
