# user/controller.go
@@ -3,13 +3,13 @@ package user
 import (
 	"errors"
 
-	"github.com/go-playground/validator/v10"
+	// "github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 	"pawdot.app/responses"
-	"pawdot.app/utils"
+	// "pawdot.app/utils"
 )
 
-var v validator.ValidationErrors
+// var v validator.ValidationErrors
 
 type Controller interface {
 	Profile(ctx *fiber.Ctx) error
@@ -17,7 +17,7 @@ type Controller interface {
 
 type controller struct {
 	s Service
-	v utils.Validator
+	// v utils.Validator
 }
 
 func InitController(s Service) Controller {
@@ -26,12 +26,23 @@ func InitController(s Service) Controller {
 	}
 }
 
+// Profile godoc
+//
+//	@Tags		User
+//	@ID			profile
+//	@Security	ApiKey
+//	@Router		/user/profile [get]
+//	@Success	201	{object}	GetProfileSuccessfulResponse
 func (c *controller) Profile(ctx *fiber.Ctx) error {
 	userId := ctx.Get("userId")
 
 	user, err := c.s.FindOne(userId)
 	if err != nil {
-		return responses.BadRequestResponse(ctx, errors.New("there was an error with this request"), err)
+		return responses.BadRequestResponse(
+			ctx,
+			errors.New("there was an error with this request"),
+			err,
+		)
 	}
 
 	return responses.OkResponse(ctx, "fetched user profile", user)
